<resources>
    <string name="app_name">Shows-dominik-premelc</string>
    <string name="emptyStateText">Your shows are not showing. Get it?</string>
    <string name="ShowsTitle">Shows</string>
    <string name="toggleRecyclerButtonText">Toggle Recycler</string>
    <string name="reviewsEmptyText">No reviews yet.</string>
    <string name="reviewsTitle">Reviews</string>
    <string name="reviewSubmitButtonText">Write a review</string>
    <string name="ShowDetailsBottomSheetTitleText">Write a review</string>
    <string name="reviewEntryHintTexr">Comment</string>
    <string name="submitReviewButtonText">Submit</string>
    <string name="leftImgDescText">leftimage</string>
    <string name="rightImgDescText">rightimage</string>
    <string name="triangleDescText">triangle</string>
    <string name="loginTitleText">Shows</string>
    <string name="loginText">Login</string>
    <string name="in_order_to_continue_please_log_in">In order to continue please log in</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="elipse">elipse</string>
    <string name="empty_icon">empty icon</string>
    <string name="arrow">arrow</string>
    <string name="profile_picture">profile picture</string>
    <string name="close_button">close button</string>
    <string name="star">star</string>
    <string name="show_image">show image</string>
    <string name="toast_make_review">Submited review successfully</string>
    <string name="reviewCount">"%s reviews %s average"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="remember_me">Remember me</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="take_a_picture">Camera</string>
    <string name="select_from_gallery">Gallery</string>
    <string name="change_profile_picture">Change profile picture?</string>
    <string name="wip">Work in progress</string>
    <string name="invalidEmail">Invalid email address</string>
    <string name="invalidPassword">Password must be at least 6 characters long</string>
    <string name="empty"/>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="registerSuccessTitle">Registration successful!</string>
    <string name="registration_failed">Registration failed</string>
    <string name="login_failed">Login failed</string>
    <string name="shows_fetch_failed">Failed to fetch shows</string>
    <string name="connection_error">Connection error</string>
    <string name="offline">Connection error , displaying offline data</string>
    <string name="reviews_fetch_failed">Failed to fetch reviews</string>
    <string name="post_review_failed">Failed to post review</string>
    <string name="top_rated">Top rated</string>
    <string name="change_photo_error">Failed to change profile photo</string>
    <string name="change_photo_success">Successfully changed profile photo</string>
    <string name="failed_to_load_details">Failed to load show details</string>
    <string name="failed_to_reach_server">Failed to reach server</string>
    <string name="file_not_found">File not found</string>
    <string name="offline_review">Reviews will be posted when connection is established</string>
</resources>