<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
<TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/change_profile_picture"
    android:textAlignment="center"
    android:textSize="20sp"
    android:textColor="@color/defaultPurple"
    android:layout_marginTop="24dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cameraButton"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_margin="24dp"
            android:backgroundTint="@color/white"
            android:text="@string/take_a_picture"
            android:textColor="@color/defaultPurple"
            app:cornerRadius="24dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/galleryButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintVertical_bias="0.666"
            app:strokeColor="@color/defaultPurple"
            app:strokeWidth="1dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/galleryButton"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_margin="24dp"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/defaultPurple"
            android:textColor="@color/white"
            android:text="@string/select_from_gallery"
            android:textSize="12sp"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cameraButton"
            app:layout_constraintTop_toBottomOf="@id/title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>