<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/showsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:text="@string/ShowsTitle"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/showsRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginTop="100dp"
        android:paddingBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showsTitle"
        app:layout_constraintBottom_toTopOf="@id/RecyclerToggleButton"
        tools:listitem="@layout/view_show_item" />

    <ImageView
        android:id="@+id/emptyStateElipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/elipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/emptyStateIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/empty_state_img"
        app:layout_constraintBottom_toBottomOf="@id/emptyStateElipse"
        app:layout_constraintEnd_toEndOf="@id/emptyStateElipse"
        app:layout_constraintStart_toStartOf="@id/emptyStateElipse"
        app:layout_constraintTop_toTopOf="@id/emptyStateElipse" />

    <TextView
        android:id="@+id/emptyState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/emptyStateText"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emptyStateElipse" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/RecyclerToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toggleRecyclerButtonText"
        app:cornerRadius="40dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
